# cmp_tool

./: .gitignore  .rdcu_pkt_mode_cfg  CHANGELOG.md  INSTALL.md  LICENSE  Makefile  README.md  _i_n_s_t_a_l_l_8md.html  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  byteorder_8h.html  byteorder_8h.js  byteorder_8h__dep__incl.map  byteorder_8h__dep__incl.md5  byteorder_8h__incl.map  byteorder_8h__incl.md5  byteorder_8h_a0c9e8ebff0765eccd394c63968052c45.html  byteorder_8h_a17640d73f8af6eba8a09e5a6ea8e0740.html  byteorder_8h_a1807284a5e70b16ca7045ee03bcc879d.html  byteorder_8h_a1bdb3afac6c2d05cb30c29c7390ec666.html  byteorder_8h_a1e09ce9ce94ecd23c06c22dda8d71919.html  byteorder_8h_a208e9c6bcc0b2ac08ef93856bd4ef913.html  byteorder_8h_a21d00f7f4ba23623e9b4592651541efb.html  byteorder_8h_a21d00f7f4ba23623e9b4592651541efb_a21d00f7f4ba23623e9b4592651541efb_cgraph.map  byteorder_8h_a21d00f7f4ba23623e9b4592651541efb_a21d00f7f4ba23623e9b4592651541efb_cgraph.md5  byteorder_8h_a2782d1e3aa0bb5d4d31be56d3d215704.html  byteorder_8h_a2e72d45a9f73c7c7ae480759ae2c870e.html  byteorder_8h_a3592db6d761d9869fc5fd7d94a4a088d.html  byteorder_8h_a37321c17f74aa61b663a1b919cad099f.html  byteorder_8h_a3839357aac69dc0139007569aaaa3be2.html  byteorder_8h_a3b53ce2c72a73affe9c4b0537c321c36.html  byteorder_8h_a4d345dde7342f8ff6520639e68b81418.html  byteorder_8h_a5cf15a58dc7151c95f4b98ac944116b7.html  byteorder_8h_a67ce562dbd56724d73fe9ece3797f17e.html  byteorder_8h_a796b3f24b0438ae9840d5d3cef1ce45f.html  byteorder_8h_a79e04d50eed7f80a1c53baf1df92d3db.html  byteorder_8h_a7b85f1731fe76a5d9dde1ce2e9007c19.html  byteorder_8h_a7b85f1731fe76a5d9dde1ce2e9007c19_a7b85f1731fe76a5d9dde1ce2e9007c19_icgraph.map  byteorder_8h_a7b85f1731fe76a5d9dde1ce2e9007c19_a7b85f1731fe76a5d9dde1ce2e9007c19_icgraph.md5  (+3828 more)
.clusterfuzzlite/: Dockerfile  build.sh  project.yaml
.github/: .codecov.yml  codecov.yml
.github/workflows/: cflite_batch.yml  cflite_build.yml  cflite_cron.yml  cflite_pr.yml  codechecker.yml  coverage.yml  documentation.yml  test.yml
doc/doxygen/: Doxyfile  Doxyfile.in  header.html  meson.build
examples/: example_cmp_icu.c  example_cmp_rdcu.c  example_compress_chunk.c  meson.build
include/: byteorder.h  cmp_cal_up_model.h  cmp_data_types.h  cmp_debug.h  cmp_entity.h  cmp_guess.h  cmp_icu.h  cmp_io.h  cmp_max_used_bits_list.h  cmp_rdcu.h  cmp_rdcu_cfg.h  cmp_rdcu_extended.h  cmp_support.h  cmp_tool_lib.h  decmp.h  list.h  meson.build  my_inttypes.h  rdcu_cmd.h  rdcu_ctrl.h  rdcu_pkt_to_file.h  rdcu_rmap.h  rmap.h  tool_lib.h
lib/: cmp_chunk.h  cmp_data_types.c  cmp_entity.c  cmp_guess.c  cmp_icu.c  cmp_icu_new.c  cmp_io.c  cmp_max_used_bits.c  cmp_max_used_bits_list.c  cmp_rdcu.c  cmp_rdcu_cfg.c  cmp_support.c  cmp_tool_lib.c  decmp.c  meson.build  rdcu_cmd.c  rdcu_ctrl.c  rdcu_pkt_to_file.c  rdcu_rmap.c  rmap.c  tool_lib.c
lib/common/: cmp_data_types.c  cmp_data_types.h  cmp_entity.c  cmp_support.c  cmp_support.h  compiler.h  list.h  meson.build  vsnprintf.c
lib/decompress/: bitstream_example.h  decmp.c  meson.build  read_bitstream.h
lib/icu_compress/: cmp_chunk_type.c  cmp_icu.c  meson.build
lib/rdcu_compress/: cmp_rdcu.c  meson.build  rdcu_ctrl.c  rdcu_rmap.c
programs/: cmp_guess.c  cmp_guess.h  cmp_io.c  cmp_io.h  cmp_tool.c  header_pars.c  meson.build  rdcu_pkt_to_file.c  rdcu_pkt_to_file.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  (+69 more)
subprojects/: doxygen-awesome-css.wrap  pcg-c-basic.wrap  unity.wrap
subprojects/packagefiles/: pcg-c-basic-Port-to-C89.patch
subprojects/packagefiles/doxygen-awesome-css/: meson.build
subprojects/packagefiles/pcg-c-basic/: meson.build
test/: meson.build
test/bench/: bench.c  benchfn.c  benchfn.h  io.h  leon3_grtimer.c  leon3_grtimer_longcount.c  leon3_timers.h  leon_reg.h  meson.build  ref_short_cadence_1_cmp.h  ref_short_cadence_2_cmp.h  timefn.c  timefn.h
test/cmp_data_types/: meson.build  test_cmp_data_types.c
test/cmp_decmp/: meson.build  test_cmp_decmp.c
test/cmp_entity/: meson.build  test_cmp_entity.c
test/cmp_icu/: meson.build  test_cmp_decmp.c  test_cmp_decmp_unused.c  test_cmp_icu.c  test_cmp_icu_new.c  test_decmp.c
test/cmp_max_used_bits/: meson.build  test_cmp_max_used_bits_list.c
test/cmp_rdcu/: meson.build  test_cmp_rdcu.c
test/cmp_rdcu_cfg/: meson.build
test/cmp_tool/: Makefile  cmp_tool_integration_test.py  cmp_tool_lib_test.c  meson.build  test_read_file8_1.txt  test_read_file8_2.txt  test_read_file8_3.txt  test_read_file8_4.txt
test/decmp/: meson.build  test_decmp.c
test/fuzz/: download_corpus.sh  fuzz.h  fuzz_cmp_tool.c  fuzz_compression.c  fuzz_data_producer.c  fuzz_data_producer.h  fuzz_decompression.c  fuzz_helpers.c  fuzz_helpers.h  fuzz_round_trip.c  getopt_long_quiet.c  meson.build
test/test_common/: del.c  meson.build  test_common.c  test_common.h
test/tools/: flash_run_leon.sh  generate_test_runner.rb  meson.build
