option('debug_level',         type : 'integer', min: 0, max: 9, value: 1,   description: 'Enable run-time debug. See lib/common/cmp_debug.h')
option('argument_input_mode', type : 'boolean', value : false,              description : 'If set, the data file is set with the first argument and the model file with the second one')
option('fuzzer',              type : 'feature', value : 'disabled',         description : 'Build for fuzzing')
option('fuzzer_ldflags',      type : 'string', value : '-fsanitize=fuzzer', description : 'Extra LDFLAGS used during linking of fuzzing binaries')
