example_cmp_icu_src = files([
  'example_cmp_icu.c'
])

example_cmp_icu_exe = executable('example_cmp_icu',
  sources : example_cmp_icu_src,
  include_directories : incdir,
  link_with : cmp_lib,
)


example_cmp_rdcu_src = files([
  'example_cmp_rdcu.c'
])

example_cmp_rdcu_lib = executable('example_cmp_rdcu',
  sources : example_cmp_rdcu_src,
  include_directories : incdir,
  link_with : cmp_lib,
)


example_compress_chunk_src = files([
  'example_compress_chunk.c'
])

example_cmp_rdcu_lib = executable('example_compress_chunk',
  sources : example_compress_chunk_src,
  include_directories : incdir,
  link_with : cmp_lib,
)
